5 August 2005 Sylvain Pion
- Specialize functors Sgn, Compare, Is_zero... for Interval_nt so that they
  return Uncertain<> (and their result_type is also updated).

3 August 2005 Sylvain Pion
- Interval_nt : remove operator&& and operator||.  Add value_type == double.
- Interval_arithmetic.h renamed to Interval_nt.h to follow CGAL's convetions.
- [doc] Interval_nt : update !

2 August 2005 Sylvain Pion
- Interval_nt : Add overloads for is_zero, is_one, is_positive, is_negative.
- New file Interval_nt_fwd.h to gather forward declarations to be sourced by
  CGAL/number_type_basic.h.
- Lazy_exact_nt : Fix for some mixed operators.
- Forward declarations in Lazy_exact_nt_fwd.h .
- Forward declarations in Filtered_exact_fwd.h .
- Add make_uncertain(Ucertain<T>).

2 August 2005 Sylvain Pion
- Uncertain : add maker function make_uncertain().

2 August 2005 Sylvain Pion
- Lazy_exact_nt : add prune_dag() to cut it down when the exact is computed.
- Lazy_exact_nt : recompute interval in update_exact, except when is_point().
- Lazy_exact_nt : introduce a static variable for zero since it's often used.

2 August 2005 Sylvain Pion
- Lazy_exact_nt : fix the identical() optimization.
- Lazy_exact_nt : add mixed operators between Lazy_exact_nt<ET1> and
  Lazy_exact_nt<ET2>
- Binary_operator_result<T1, T2> : new tool to get the type of mixed
  operators.
- Binary_operator_result.h : move to Number_types.
- Add specialization of
  Binary_operator_result< Lazy_exact_nt<ET1>, Lazy_exact_nt<ET2> >.

1 August 2005 Sylvain Pion
- Fix for last change.

1 August 2005 Sylvain Pion
- Replace uses of convert_to() by NT_converter.
- Add NT_converter<Lazy_exact_nt<ET>, ET> specialization.
- Change Exact_type_selecter for Lazy_exact_nt<ET> to ET
  (instead of Lazy_exact_nt<ET>).

30 July 2005 Sylvain Pion
- Add Uncertain<T>.
- Use it in comparison operators and sign() and compare() of Interval_nt.
- Use it instead of Certified::operators in Lazy_exact_nt.