@@ -1,3 +1,6 @@
+6 August 2005 Sylvain Pion
+- Uncertain : add overload for enum_cast.
+
 5 August 2005 Sylvain Pion
 - Specialize functors Sgn, Compare, Is_zero... for Interval_nt so that they
   return Uncertain<> (and their result_type is also updated).
